Amélioration du code
